# claude-fleet

./: .gitignore  LICENSE  Makefile  README.md  fleet.yml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: review-feedback-automation.yml
ansible/inventory/: fleet.py
ansible/roles/base/tasks/: main.yml
ansible/roles/claude_code/tasks/: main.yml
ansible/roles/claude_code/templates/: claude-settings.json.j2
ansible/roles/claude_start/tasks/: main.yml
ansible/roles/repos/tasks/: main.yml
ansible/roles/secrets/tasks/: main.yml
ansible/roles/secrets/templates/: fleet-env.j2
ansible/roles/skills/tasks/: main.yml
ansible/roles/workspace/tasks/: main.yml
defaults/: config.yml  env.example
infra/: Pulumi.yaml  __main__.py
src/cfleet/: __init__.py  api.py  cli.py  config.py  devcontainer.py  engine.py  events.py  infra.py  provisioner.py  relay_client.py  ssh.py  tui.py  worker_relay.py
src/cfleet/ansible/playbooks/: bootstrap.yml
src/cfleet/ansible/roles/base/tasks/: main.yml
src/cfleet/ansible/roles/claude_code/tasks/: main.yml
src/cfleet/ansible/roles/claude_code/templates/: claude-settings.json.j2
src/cfleet/defaults/: CLAUDE.md  config.yml  env.example
src/cfleet/devcontainer/: Dockerfile
src/cfleet/docs/: scoped-cloud-roles.md
src/cfleet/infra_pulumi/: __main__.py
src/cfleet/static/: index.html  manifest.json
src/open_fleet/: __init__.py  api.py  cli.py  config.py  engine.py  infra.py  provisioner.py  ssh.py  tui.py
src/open_fleet/static/: index.html
(+3 files in other folders)
