[project]
name = "open-fleet"
version = "0.1.0"
description = "CLI + TUI for orchestrating long-running Claude Code instances on cloud VMs"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "textual",
    "paramiko",
    "pyyaml",
    "pydantic",
    "pulumi",
    "pulumi-azure-native",
    "ansible-runner",
    "watchfiles",
]

[project.scripts]
fleet = "open_fleet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_fleet"]
