[project]
name = "claude-fleet"
version = "0.1.0"
description = "CLI + TUI for orchestrating long-running Claude Code instances on cloud VMs"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "textual",
    "paramiko",
    "pyyaml",
    "pydantic",
    "pulumi",
    "pulumi-azure-native",
    "pulumi-gcp",
    "ansible-runner",
    "watchfiles",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
]

[project.scripts]
cfleet = "cfleet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cfleet"]

[tool.hatch.build.targets.wheel.force-include]
"src/cfleet/infra_pulumi" = "cfleet/infra_pulumi"
"src/cfleet/ansible" = "cfleet/ansible"
"src/cfleet/defaults" = "cfleet/defaults"
"src/cfleet/static" = "cfleet/static"
